fix(docker): add SELinux volume label to Grafana provisioning mount
Add :z flag to the Grafana provisioning volume mount to enable SELinux
compatibility on RHEL-based systems (Fedora, CentOS, Rocky Linux).

Without this flag, SELinux blocks container access to host files even
when properly mounted, preventing auto-import of dashboards and
datasources. The :z flag automatically relabels files with a shared
SELinux context, allowing proper access while keeping SELinux enabled.

Fixes grafana dashboard and datasource provisioning on Linux systems
with SELinux in enforcing mode.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_BASIC_ENABLED=false
     volumes:
-      - ./grafana:/etc/grafana/provisioning/
+      - ./grafana:/etc/grafana/provisioning/:z
       - grafana_data:/var/lib/grafana
     depends_on:
       - influxdb
