chore(lint): fix all trunk check issues
- Add cspell dictionary words: gethcommon, jscommon, Warnf, errname
- Rename short variable names (tc -> testCase, to -> toAddress, rv -> reflectValue)
- Add blank lines before return statements
- Fix cuddle issues (declarations, assignments, if statements)
- Add type assertion checks with ok pattern
- Remove unnecessary type conversion
- Create sentinel error errNegativeValue for reuse
- Add nolint directives for necessary global variables
- Wrap external ABI parsing errors
- Fix unsafe uint64 -> int64 conversion with safeInt64FromUint64
- Remove obsolete +build tag (go:build is sufficient)

--- a/cspell.yaml
+++ b/cspell.yaml
@@ -121,6 +121,7 @@ words:
   - envoyproxy
   - ERRO
   - errorkey
+  - errname
   - esbuild
   - eslintcache
   - ethabi
@@ -148,6 +149,7 @@ words:
   - gasleft
   - genproto
   - geth
+  - gethcommon
   - getrandom
   - getfoundry
   - gitleaks
@@ -199,6 +201,7 @@ words:
   - jmoiron
   - joct
   - josharian
+  - jscommon
   - jstypes
   - jumpi
   - keccak
@@ -340,6 +343,7 @@ words:
   - uups
   - valyala
   - viem
+  - Warnf
   - webcrypto
   - wrapcheck
   - xxhash
