chore(ethereum): improve client handling and test coverage (#7)
* chore(ethereum): update client handling and tests

* fix: uncomment erc20 monitor

* fix(xk6-ethereum): fix test address and type mismatches

- Fix invalid test address (39 hex chars → 40): add missing digit
- Add UncleHash to test header to match computed block hash
- Cast tx types to uint8 for type assertion compatibility
- Use Value: 0 in TestEstimateGasWithAccessList (test is about access lists, not transfers)

* chore(lint): fix all trunk check issues

- Add cspell dictionary words: gethcommon, jscommon, Warnf, errname
- Rename short variable names (tc -> testCase, to -> toAddress, rv -> reflectValue)
- Add blank lines before return statements
- Fix cuddle issues (declarations, assignments, if statements)
- Add type assertion checks with ok pattern
- Remove unnecessary type conversion
- Create sentinel error errNegativeValue for reuse
- Add nolint directives for necessary global variables
- Wrap external ABI parsing errors
- Fix unsafe uint64 -> int64 conversion with safeInt64FromUint64
- Remove obsolete +build tag (go:build is sufficient)

* chore: update go.work.sum with dependency checksums

* fix: restore uint64 type conversion for safeInt64FromUint64 call

The function expects uint64 parameter, not int64 constant

--- a/cspell.yaml
+++ b/cspell.yaml
@@ -56,8 +56,8 @@ words:
   - bytebufferpool
   - bytemuck
   - byzantinium
-  - CALDATACOPY
   - cachedir
+  - CALDATACOPY
   - callcode
   - capwords
   - cascadia
@@ -119,6 +119,8 @@ words:
   - elif
   - envconfig
   - envoyproxy
+  - equalf
+  - errname
   - ERRO
   - errorkey
   - esbuild
@@ -147,9 +149,10 @@ words:
   - funlen
   - gasleft
   - genproto
-  - geth
-  - getrandom
   - getfoundry
+  - geth
+  - gethcommon
+  - getrandom
   - gitleaks
   - gjson
   - glog
@@ -199,6 +202,7 @@ words:
   - jmoiron
   - joct
   - josharian
+  - jscommon
   - jstypes
   - jumpi
   - keccak
@@ -340,6 +344,7 @@ words:
   - uups
   - valyala
   - viem
+  - Warnf
   - webcrypto
   - wrapcheck
   - xxhash
